--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,50 +1,109 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
+
+:root {
+    --main-bg-color: #E9E9E9;
+    --primary-text-color: #424242;
+    --accent-color: #FF3F3C;
+}
+
 body {
-    font-family: Helvetica, sans-serif;
-    color: #EAE8FF;
-    background: #2D3142;
-    padding: 0 40px;
-    text-align: center;
-}
-
-nav {
-    margin: 40px auto 0 auto;
-    width: 250px;
-    border-radius: 50px;
-    background: #212431;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-evenly;
+    background: var(--main-bg-color);
+    color: var(--primary-text-color);
+    font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
 }
 
-nav ul li {
-    list-style-type: none;
+header {
+    padding: 20px;
+    margin-bottom: 100px;
+}
+
+header h1 {
+    margin: 0;
+    font-weight: normal;
+}
+
+main {
+    background: url('../images/polaroid.png') no-repeat center 100px;
+    /* https://stackoverflow.com/questions/14029277/css-background-image-not-displaying */
+
+    margin: 0 auto;
+    width: 1000px;
+    padding-bottom: 50px;
+}
+
+.hero {
+    text-align: center;
+    min-height: 800px;
+}
+
+.hero h2 {
+    font-size: 9em;
+    line-height: 1em;
+    text-transform: uppercase;
     margin: 0;
 }
 
-nav ul li a {
-    display: inline-block;
+.details ul li {
+    list-style-type: none;
+    margin: 10px 0; 
+    padding: 0 0 0 40px;
+}
+
+.details ul li.wifi {
+    background: url('../icons/wifi-solid.svg') no-repeat center left;
+}
+
+.details ul li.cloud {
+    background: url('../icons/cloud-arrow-up-solid.svg') no-repeat center left;
+}
+
+.details ul li.qr {
+    background: url('../icons/qrcode-solid.svg') no-repeat center left;
+}
+
+.details ul li.share {
+    background: url('../icons/photo-film-solid.svg') no-repeat center left;
+}
+
+.details h3 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.cta h3 {
+    font-size: 50px;
+    text-align: center;
+}
+
+/* https://www.w3schools.com/howto/howto_css_newsletter.asp 
+   https://www.w3schools.com/css/css3_buttons.asp */
+
+.cta form {
+    background: #E2E2E2;
+    text-align: center;
+    padding: 40px;
+    margin: 50px;
+    border-radius: 40px;
+}
+
+.cta form input[type=text] {
     padding: 20px;
-    color: #EAE8FF;
-    text-decoration: none;
-    font-size: 1.2em;
+    width: 600px;
+    text-align: left;
+    font-family: "Inter", sans-serif;
+    border: none;
+    font-size: 15px;
 }
 
-h1 {
-    font-size: 8em;
-    letter-spacing: -2px;
-}
-
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-img.about {
-    opacity: 0.5;
+.cta form input[type=button] {
+    background-color: red;
+    color: white;
+    padding: 20px 10px;
+    font-family: "Inter", sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    font-size: 15px;
 }
