--- a/index.liquid
+++ b/index.liquid
@@ -3,5 +3,49 @@ layout: layout.liquid
 title: 11ty Boilerplate
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lab Notes</title>
+    <link rel="stylesheet" href="styles/screen.css">
+</head>
+
+<body>
+
+    <header>
+        <h1>Polaroid Cloud</h1>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>Film to phone</h2>
+        </section>
+
+        <section class="details">
+            <h3>Any Cloud, anytime.</h3>
+            <p>With Polaroid Cloud, you can sync your photos to your favorite cloud service while still enjoying the instant printing you've come to expect from Polaroid. Using our special instant photo paper, your image is uploaded to the web and a QR code is generated and printed with the instant photo. Perfect for sharing with your friends and family.</p>
+
+            <h3>Easy, cheesy!</h3>
+            <ul>
+                <li class="wifi">Connect your Polaroid to a WiFi network</li>
+                <li class="cloud">Configure your favorite cloud</li>
+                <li class="qr">Point, shoot, and print your QR-tagged photo</li>
+                <li class="share">Share your physical and digital photos with friends and family</li>
+            </ul>
+        </section>
+
+        <section class="cta">
+            <h3>Be the first to know.</h3>
+            <form action="#">
+                <input type="text" placeholder="Enter your email address to recieve updates"> <input type="button" value="Keep in touch">
+            </form>
+        </section>
+    </main>
+
+</body>
+
+</html>
