--- a/index.liquid
+++ b/index.liquid
@@ -41,7 +41,7 @@ title: 11ty Boilerplate
         <section class="cta">
             <h3>Be the first to know.</h3>
             <form action="#">
-                <input type="text" placeholder="Enter your email address to recieve updates"> <input type="button" value="Keep in touch">
+                <input type="text" placeholder="Enter your email address to receive updates"> <input type="button" value="Keep in touch">
             </form>
         </section>
     </main>
